css/cardsort.css
#hamburger{
	padding-right: 10px;
}

/*Group Drop Areas*/
.column-area-primary {
	float: left;
	width: auto;
	min-height: 100%;
	min-width: 200px;
	background-color: rgb(0,158,195);
	padding:10px;
}
.column-area-secondary {
	float: left;
	width: auto;
	min-height: 100%;
	min-width: 200px;
	background-color: rgb(0,130,160);
}

/*Groups*/
.group {
	width: auto;
	color: black;
	max-width: 200px;
	min-height: 150px;
	background-color: rgb(219,221,224);
	margin: 10px;
	border-radius: 4px;	
    word-wrap: break-word;
    cursor: move;
    display: table;
}
.group .contenteditable {
	background-color: white;
	color: black !important;
}
.group .title {
	color: black;
	cursor: pointer;
	font-size: 14px;
	padding: 5px;
}
.group .closeicon {
	cursor: pointer;
	color: gray;
	float: right;
	margin: 5px;
}

.group .iconContainer{
	text-align: center;
}
.group .grabicon {
	cursor: move;
	color: gray;
}
.group .droparea {
	min-height: 100px;
	background-color: #B0B0B0;
	padding: 2px;
	cursor: default;
	min-height: 150px;
}
/*Items*/
.item {
	width: auto;
	cursor: move;
	max-width: 200px;
	color: black;
	background-color: white;
	cursor: grab;	
	margin: 5px;
	padding: 5px;
	border-radius: 3px;	
	font-size: 14px;
	word-wrap: break-word;
}

